Refactor database to implement beatmapset snapshots & add /beatmapsets/listings search operation
